--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,11 @@
 {
+  "version": 2,
+  "builds": [
+    { "src": "routes.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/routes.py" }
+  ]
   "headers": [
     {
       "source": "/(.*)",
